# XJGARSDKDemoApp-MAC

./: CMakeLists.txt  README.md  libXJGARSDKTest  liblibiconv.dylib  test_XJGARSDK_freeglut.cpp
ResForShader/: Thumbs.db  cmake_install.cmake
StickerPapers/: cmake_install.cmake
